fix: indents in blocks according to rule 3.5 in html-and-css.md

--- a/style.css
+++ b/style.css
@@ -18,8 +18,11 @@
 }
 
 @media (max-width:768px) {
-  .start { text-align: center;
-}
+
+  .start { 
+    text-align: center;
+  }
+  
 }
 .main {
   display: block;
