--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@
 .task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 .task-row-wrapper {
   display: flex;
@@ -119,7 +119,7 @@ ul {
   width: 226px;
 }
 .li-block >    .input-text {
-  width: 226px
+  width: 226px;
 }
 .delete .delete-img {
   height: 2em;
@@ -132,18 +132,18 @@ ul {
 
 /* Completed */
 #completed .label {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 .li-block .input-text {
-  display: none
+  display: none;
 }
 
 .edit-mode .input-text {
   display: inline-block;
-  width:224px
+  width:224px;
 }
 
 .edit-mode .label {
