fix: separating selectors and properties according to rule 3.8 in html-and-css.md

--- a/style.css
+++ b/style.css
@@ -41,10 +41,12 @@ ul {
   margin: 0;
   padding: 0px;
 }
-.li-block, .subtitle {
+.li-block,
+.subtitle {
   list-style: none;
 }
-.input, .buttons{
+.input,
+.buttons {
   outline: none;
 }
 .buttons {
